--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,17 @@
  <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+ <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+     xmlns:app="http://schemas.android.com/apk/res-auto"
+     xmlns:tools="http://schemas.android.com/tools"
+     android:layout_width="match_parent"
+     android:layout_height="match_parent"
+     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/txtHeroName"
         android:layout_width="86dp"
         android:layout_height="31dp"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="280dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="256dp"
         android:text="Ches Cuares"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,41 +20,43 @@
         android:id="@+id/txtMonsName"
         android:layout_width="89dp"
         android:layout_height="32dp"
-        android:layout_marginEnd="80dp"
+        android:layout_marginEnd="32dp"
         android:text="Adrian Cuaton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/txtHeroName" />
 
     <TextView
-        android:id="@+id/txtHeroHP"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="MintalHP"
-        app:layout_constraintStart_toStartOf="@+id/txtHeroName"
-        app:layout_constraintTop_toBottomOf="@+id/txtHeroName" />
+         android:id="@+id/txtHeroHP"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_marginTop="44dp"
+         android:text="MintalHP"
+         app:layout_constraintStart_toStartOf="@+id/txtHeroName"
+         app:layout_constraintTop_toBottomOf="@+id/txtHeroName" />
 
     <TextView
         android:id="@+id/txtMonsHP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="40dp"
         android:text="MatinaHP"
         app:layout_constraintEnd_toEndOf="@+id/txtMonsName"
+        app:layout_constraintHorizontal_bias="0.995"
+        app:layout_constraintStart_toEndOf="@+id/txtHeroHP"
         app:layout_constraintTop_toBottomOf="@+id/txtMonsName" />
 
     <TextView
-        android:id="@+id/txtHeroMP"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="MintalMP"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/txtMonsMP"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/txtHeroHP"
-        app:layout_constraintTop_toBottomOf="@+id/txtHeroHP"
-        app:layout_constraintVertical_bias="0.0" />
+         android:id="@+id/txtHeroMP"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_marginTop="16dp"
+         android:text="MintalMP"
+         app:layout_constraintBottom_toBottomOf="parent"
+         app:layout_constraintEnd_toStartOf="@+id/txtMonsMP"
+         app:layout_constraintHorizontal_bias="0.0"
+         app:layout_constraintStart_toStartOf="@+id/txtHeroHP"
+         app:layout_constraintTop_toBottomOf="@+id/txtHeroHP"
+         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/txtMonsMP"
@@ -64,15 +66,45 @@
         app:layout_constraintEnd_toEndOf="@+id/txtMonsHP"
         app:layout_constraintTop_toTopOf="@+id/txtHeroMP" />
 
-    <Button
-        android:id="@+id/btnNextTurn"
+   <Button
+       android:id="@+id/btnNextTurn"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="First turn"
+       app:layout_constraintEnd_toStartOf="@+id/txtMonsDPS"
+       app:layout_constraintHorizontal_bias="0.507"
+       app:layout_constraintStart_toEndOf="@+id/txtHeroDPS"
+       app:layout_constraintTop_toTopOf="@+id/txtHeroDPS" />
+
+    <TextView
+        android:id="@+id/txtHeroDPS"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="140dp"
+        android:layout_marginTop="12dp"
+        android:text="Cuares Damage"
+        app:layout_constraintStart_toStartOf="@+id/txtHeroName"
+        app:layout_constraintTop_toBottomOf="@+id/txtHeroName" />
+
+    <TextView
+        android:id="@+id/txtMonsDPS"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Next turn"
-        app:layout_constraintEnd_toStartOf="@+id/txtMonsName"
-        app:layout_constraintHorizontal_bias="0.055"
-        app:layout_constraintStart_toEndOf="@+id/txtHeroName"
-        app:layout_constraintTop_toTopOf="@+id/txtHeroName" />
+        android:text="Cuaton Damage"
+        app:layout_constraintBottom_toTopOf="@+id/txtMonsHP"
+        app:layout_constraintEnd_toEndOf="@+id/txtMonsName"
+        app:layout_constraintHorizontal_bias="0.995"
+        app:layout_constraintStart_toEndOf="@+id/txtHeroDPS"
+        app:layout_constraintTop_toBottomOf="@+id/txtMonsName"
+        app:layout_constraintVertical_bias="0.23" />
+
+    <TextView
+        android:id="@+id/txtCombatLog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="44dp"
+        android:text="Combat Log"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
