--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
- <?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
  <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
@@ -10,8 +10,8 @@
         android:id="@+id/txtHeroName"
         android:layout_width="86dp"
         android:layout_height="31dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="256dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="188dp"
         android:text="Ches Cuares"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,19 +20,19 @@
         android:id="@+id/txtMonsName"
         android:layout_width="89dp"
         android:layout_height="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="16dp"
         android:text="Adrian Cuaton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/txtHeroName" />
 
     <TextView
-         android:id="@+id/txtHeroHP"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_marginTop="44dp"
-         android:text="MintalHP"
-         app:layout_constraintStart_toStartOf="@+id/txtHeroName"
-         app:layout_constraintTop_toBottomOf="@+id/txtHeroName" />
+        android:id="@+id/txtHeroHP"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="44dp"
+        android:text="MintalHP"
+        app:layout_constraintStart_toStartOf="@+id/txtHeroName"
+        app:layout_constraintTop_toBottomOf="@+id/txtHeroName" />
 
     <TextView
         android:id="@+id/txtMonsHP"
@@ -46,17 +46,17 @@
         app:layout_constraintTop_toBottomOf="@+id/txtMonsName" />
 
     <TextView
-         android:id="@+id/txtHeroMP"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_marginTop="16dp"
-         android:text="MintalMP"
-         app:layout_constraintBottom_toBottomOf="parent"
-         app:layout_constraintEnd_toStartOf="@+id/txtMonsMP"
-         app:layout_constraintHorizontal_bias="0.0"
-         app:layout_constraintStart_toStartOf="@+id/txtHeroHP"
-         app:layout_constraintTop_toBottomOf="@+id/txtHeroHP"
-         app:layout_constraintVertical_bias="0.0" />
+        android:id="@+id/txtHeroMP"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="MintalMP"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/txtMonsMP"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/txtHeroHP"
+        app:layout_constraintTop_toBottomOf="@+id/txtHeroHP"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/txtMonsMP"
@@ -66,15 +66,16 @@
         app:layout_constraintEnd_toEndOf="@+id/txtMonsHP"
         app:layout_constraintTop_toTopOf="@+id/txtHeroMP" />
 
-   <Button
-       android:id="@+id/btnNextTurn"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:text="First turn"
-       app:layout_constraintEnd_toStartOf="@+id/txtMonsDPS"
-       app:layout_constraintHorizontal_bias="0.507"
-       app:layout_constraintStart_toEndOf="@+id/txtHeroDPS"
-       app:layout_constraintTop_toTopOf="@+id/txtHeroDPS" />
+    <Button
+        android:id="@+id/btnNextTurn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:text="First turn"
+        app:layout_constraintEnd_toStartOf="@+id/txtMonsDPS"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toEndOf="@+id/txtHeroDPS"
+        app:layout_constraintTop_toTopOf="@+id/txtHeroDPS" />
 
     <TextView
         android:id="@+id/txtHeroDPS"
@@ -102,9 +103,63 @@
         android:id="@+id/txtCombatLog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="16dp"
         android:text="Combat Log"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.957"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/btnSkill1"
+        android:layout_width="88dp"
+        android:layout_height="82dp"
+        android:layout_marginTop="4dp"
+        android:scaleType="fitXY"
+        android:text="Stun"
+        app:layout_constraintEnd_toStartOf="@+id/btnSkill2"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnNextTurn"
+        app:srcCompat="@drawable/skill1" />
+
+    <ImageButton
+        android:id="@+id/btnSkill2"
+        android:layout_width="88dp"
+        android:layout_height="82dp"
+        android:clickable="false"
+        android:scaleType="fitXY"
+        android:text="crit"
+        app:layout_constraintEnd_toStartOf="@+id/btnSkill3"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/btnSkill1"
+        app:layout_constraintTop_toTopOf="@+id/btnSkill1"
+        app:srcCompat="@drawable/skill2" />
+
+    <ImageButton
+        android:id="@+id/btnSkill3"
+        android:layout_width="87dp"
+        android:layout_height="81dp"
+        android:clickable="false"
+        android:scaleType="fitXY"
+        android:text="Lifesteal"
+        app:layout_constraintEnd_toStartOf="@+id/btnSkill4"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/btnSkill2"
+        app:layout_constraintTop_toTopOf="@+id/btnSkill2"
+        app:srcCompat="@drawable/skill3" />
+
+    <ImageButton
+        android:id="@+id/btnSkill4"
+        android:layout_width="89dp"
+        android:layout_height="81dp"
+        android:scaleType="fitXY"
+        android:text="SuperSkill"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/btnSkill3"
+        app:layout_constraintTop_toTopOf="@+id/btnSkill3"
+        app:srcCompat="@drawable/skill4" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
